--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^15.3.0"
   },
   "devDependencies": {
+    "axios": "^0.13.1",
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-react": "^6.11.1",
